[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Towers/Tower.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilesheet/towerDefense_tilesheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/RangeCircle/turret_range_circle.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Upgrades.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Towers/TowerMenu.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.5, 31.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[node name="SingleTurretTower" type="Area2D"]
collision_layer = 4
collision_mask = 6
script = ExtResource( 1 )

[node name="TurretTowerBase" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1280, 448.505, 64, 63.5 )

[node name="TurretTowerGun" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -10 )
region_enabled = true
region_rect = Rect2( 1216, 640, 64, 64 )

[node name="ShotPosition" type="Node2D" parent="TurretTowerGun"]
position = Vector2( 0, -37.0412 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5.6 )
shape = SubResource( 1 )

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
visible = false
shape = SubResource( 2 )

[node name="TurretRange" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Upgrades" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="TowerMenu" parent="." instance=ExtResource( 5 )]
margin_left = -125.0
margin_top = -275.0
margin_right = 175.0
margin_bottom = -25.0
[connection signal="area_entered" from="." to="." method="_on_TurretTower1_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_TurretTower1_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="AggroRange" to="." method="_on_AggroRange_area_entered"]
[connection signal="area_exited" from="AggroRange" to="." method="_on_AggroRange_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="about_to_show" from="TowerMenu" to="." method="_on_TowerMenu_about_to_show"]
